--- a/app/src/main/res/layout/follow_list_item.xml
+++ b/app/src/main/res/layout/follow_list_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="300dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:minWidth="264dp"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:background="@drawable/drawable_transparent_blue_border_round_corners"
                 android:padding="4dp"
