--- a/app/src/main/res/layout/fragment_profile_tweet_list.xml
+++ b/app/src/main/res/layout/fragment_profile_tweet_list.xml
@@ -1,14 +1,65 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context="com.yoav.twitterclient.fragments.ProfileTweetListFragment"
-    >
+<android.support.design.widget.CoordinatorLayout
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view_profile_tweet_list"
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swipe_refresh_container"
+        android:background="@android:color/white"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" >
 
-</FrameLayout>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view_profile_tweet_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clipToPadding="false"/>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+    <RelativeLayout
+        android:id="@+id/relative_layout_loading_tweets"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_gravity="center_horizontal"
+        app:layout_anchor="@id/swipe_refresh_container"
+        app:layout_anchorGravity="bottom|right|end"
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:background="@android:color/white"
+        >
+
+        <TextView
+            android:id="@+id/text_view_loading_more_tweets"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/loading"
+            android:textSize="20sp"
+            android:fontFamily="Arial"
+            android:textStyle="italic"
+            android:background="@android:color/white"
+            android:textColor="@color/colorAccent"
+            android:gravity="center_vertical"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            />
+
+        <ProgressBar
+            android:id="@+id/progress_bar_loading_tweets"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            android:layout_toRightOf="@id/text_view_loading_more_tweets"
+            android:layout_alignTop="@id/text_view_loading_more_tweets"
+            android:layout_alignParentBottom="true"
+            tools:visibility="visible"
+            />
+
+    </RelativeLayout>
+
+</android.support.design.widget.CoordinatorLayout>
