--- a/app/src/main/res/layout/regular_tweet_feed_item.xml
+++ b/app/src/main/res/layout/regular_tweet_feed_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:orientation="vertical"
                 android:layout_marginTop="12dp"
                 android:layout_marginLeft="12dp"
@@ -125,6 +126,7 @@
             android:id="@+id/respond_button"
             android:layout_width="12dp"
             android:layout_height="12dp"
+            android:layout_marginTop="2dp"
             android:src="@drawable/respond"
             />
 
@@ -145,20 +147,29 @@
             tools:text="2,231"
             />
 
-        <ImageView
-            android:id="@+id/favorites_icon"
-            android:layout_width="12dp"
-            android:layout_height="12dp"
-            android:src="@drawable/heart"
-            android:layout_marginTop="2dp"
-            android:layout_marginLeft="30dp"
-            />
+        <!--<ImageView-->
+            <!--android:id="@+id/favorites_icon"-->
+            <!--android:layout_width="12dp"-->
+            <!--android:layout_height="12dp"-->
+            <!--android:src="@drawable/heart"-->
+            <!--android:layout_marginTop="2dp"-->
+            <!--android:layout_marginLeft="30dp"-->
+            <!--/>-->
+
+        <com.like.LikeButton
+            app:icon_type="heart"
+            app:icon_size="12dp"
+            android:id="@+id/favorite_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="-8dp"
+            android:layout_marginLeft="30dp"/>
 
         <TextView
             android:id="@+id/textview_favorites_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
+            android:layout_marginLeft="-2dp"
             tools:text="2,231"
             />
 
