--- a/app/src/main/res/layout/fragment_profile_tweet_list.xml
+++ b/app/src/main/res/layout/fragment_profile_tweet_list.xml
@@ -15,7 +15,7 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior" >
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_view_profile_tweet_list"
+            android:id="@+id/recycler_view_feed"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clipToPadding="false"/>
