--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -155,4 +155,22 @@
 
     </RelativeLayout>
 
+    <TextView
+        tools:text="Send Follow Request"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/image_view_user_cover_photo"
+        android:layout_toRightOf="@+id/image_view_user_profile_photo"
+        android:layout_toEndOf="@+id/image_view_user_profile_photo"
+        android:id="@+id/text_view_follow_status"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:elevation="4dp"
+        android:shadowColor="@android:color/black"
+        android:shadowDx="2"
+        android:shadowDy="2"
+        android:layout_marginTop="2dp"
+        android:layout_marginLeft="4dp"
+        />
+
 </RelativeLayout>
